force-app/main/default/objects/Year__c/fields/FICA__c.field-meta.xml
<CustomField>
    <fullName>FICA__c</fullName>
    <label>FICA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>