force-app/main/default/objects/Year__c/fields/FUTA__c.field-meta.xml
<CustomField>
    <fullName>FUTA__c</fullName>
    <label>FUTA</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>