force-app/main/default/objects/Year__c/fields/Medicare__c.field-meta.xml
<CustomField>
    <fullName>Medicare__c</fullName>
    <label>Medicare</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>