force-app/main/default/objects/Year__c/fields/Year_Code__c.field-meta.xml
<CustomField>
    <fullName>Year_Code__c</fullName>
    <externalId>true</externalId>
    <label>Year Code</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>