force-app/main/default/objects/Year__c/fields/Year_Status__c.field-meta.xml
<CustomField>
    <fullName>Year_Status__c</fullName>
    <formula>IF(
Start_Date__c  &lt;=  TODAY()  &amp;&amp;  End_Date__c  &gt;  TODAY() , &quot;Active&quot;, 
IF(
ISPICKVAL(Status__c , &quot;Active&quot;), &quot;Active&quot;, &quot;Inactive&quot;))</formula>
    <label>Year Status</label>
    <type>Text</type>
</CustomField>